src/test/resources/private/typechecking/pass/member_access/member_07.jova
class Test{
public int x;

  public int t(int x, bool b, Test t) {
    return 0;
  }
}

class Main2 {
   private Test test;
   private Test x;

   private int testing(int x) {
        return this.x.t(0, true, this.x);
   }

  public int main22() {
    int test;

    this.test.x = this.testing(testing(testing(testing(0))));
    return this.test.x;
  }

}